--- a/xz/teacherCheck.html
+++ b/xz/teacherCheck.html
@@ -21,7 +21,7 @@
 .bottext p{color:#fff;font-size:0.15rem;text-align: center;}
 .checkform{width:100%;background:#eee;margin-top:1.5rem;padding:0.45rem;box-sizing: border-box;}
 .checkform h4{
-	font-size:30px;
+	font-size:24px;
 	color:#333;
 	text-align: center;
 	font-weight: 400;
@@ -56,7 +56,7 @@
         <i class="iconfont icon-fanhui"></i>
     </div>
     <div class="center">
-        名师验证
+        老师验证
     </div>
     <div class="right">
        <a href=""><i class="iconfont icon-gerenzhongxin"></i></a>
